--- a/Blackjack/Blackjack.vcxproj
+++ b/Blackjack/Blackjack.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="inc\Card.h" />
     <ClInclude Include="inc\Dealer.h" />
     <ClInclude Include="inc\Deck.h" />
+    <ClInclude Include="inc\main.h" />
     <ClInclude Include="inc\Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
