--- a/Blackjack/Blackjack.vcxproj.filters
+++ b/Blackjack/Blackjack.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="inc\Dealer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
