Added More Color functionaility, created color namespace with a printwithcolor function that takes in the string to be printed and then a ansi color code to print the string with a color

--- a/Blackjack/Blackjack.vcxproj
+++ b/Blackjack/Blackjack.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Card.hpp" />
+    <ClInclude Include="inc\colors.hpp" />
     <ClInclude Include="inc\Dealer.hpp" />
     <ClInclude Include="inc\Deck.hpp" />
     <ClInclude Include="inc\Blackjack.hpp" />
