--- a/Blackjack/Blackjack.vcxproj.filters
+++ b/Blackjack/Blackjack.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="inc\Blackjack.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\colors.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
