Create a Game Engine Classq
- Instead of using a namespace, I created a class to handle anything game logic.
- Used std::accumulate instead of a for loop to count cards in the vector (school assignment)

--- a/Blackjack/Blackjack.vcxproj
+++ b/Blackjack/Blackjack.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="inc\Dealer.hpp" />
     <ClInclude Include="inc\Deck.hpp" />
     <ClInclude Include="inc\Blackjack.hpp" />
+    <ClInclude Include="inc\Engine.hpp" />
     <ClInclude Include="inc\Player.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
