--- a/Blackjack/Blackjack.vcxproj.filters
+++ b/Blackjack/Blackjack.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="inc\colors.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\Engine.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
