--- a/Blackjack/Blackjack.vcxproj.filters
+++ b/Blackjack/Blackjack.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\GameEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\AuthSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Card.hpp">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="inc\GameEngine.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\AuthSystem.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
